13

* #5065: Handle None from get_preferred_connection (cassidy)

12

* #4743: Fix self._preview conflict with screenshot for journal (morgs)

11

* new icon (morgs)

10

* #2736: Reapplied status alerts with a fallback suggested
  by hmmmbird (morgs)

9

* Reverted #2736 status alerts because it depends on
  newer sugar than in current joyride (morgs)

8

* #2736: Added status bar showing mesh events (morgs)
* Allow multiple votes on one XO (morgs)

7

* #3791: Tubes API change (morgs)
* Use tubeconn from sugar.presence (morgs)
* #3138: Apply sugar.graphics API change (morgs)
* Remove self.set_title - allows title to be changed (morgs)

6

* Re-enable lesson plans (morgs)

5

* Add tubeconn.py - required for sharing (morgs)

4

* Better icon since it is displayed in the mesh view
* Mesh collaboration functionality